# tBMP

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Examples  README.md  TODO.md  index.html  tBMP.ksy
.github/workflows/: ci.yml  release-cargo.yml  release-npm.yml  release.yml  static.yml
Demo/: index.html  package-lock.json  package.json  vite.config.mjs
Demo/public/: examples
Demo/public/examples/: all.tbmp  blackAndWhiteP1File.tbmp  colorP3FileOnePixelPerLine.tbmp  custom_meta.tbmp  masks.tbmp  metadata.tbmp  palette.tbmp  picsum_block_mode_block_sparse.tbmp  picsum_custom_mode_custom.tbmp  picsum_span_mode_span.tbmp  picsum_zerorange_mode_zerorange.tbmp  sample_640x426.tbmp  tBMP_Logo.ppm  tBMP_Logo.tbmp
Demo/public/wasm/: tbmp_wasm.d.ts  tbmp_wasm.js  tbmp_wasm.wasm
Demo/src/: canvas.js  dom.js  examples.js  main.js  render.js  state.js  wasm-helpers.js
Demo/styles/: styles.css
Docs/: docmd.config.js  package-lock.json
Docs/docs/: index.md
Docs/docs/api/: decoder.md  index.md  metadata.md  reader.md  rotation.md  types.md  wasm.md  writer.md
Docs/docs/getting-started/: concepts.md  quickstart.md
Docs/docs/guide/: cli.md  design-philosophy.md  embedded-systems.md  encoding.md  games.md  metadata.md  (+2 more)
Examples/: colorP6File.tbmp  picsum_extra_a_mode_rle.tbmp  picsum_raw_mode_raw.tbmp  picsum_rle_mode_rle.tbmp  picsum_sparse_mode_sparse.tbmp
Scripts/: build_rust.sh  build_wasm.sh  clean.sh  doc_rust.sh  format.sh  format_rust.sh
assets/: index-CAUaJ8h-.js  index-CAUaJ8h-.js.map  index-CarksO-e.js  index-CarksO-e.js.map  index-DDH02_pn.js  index-DDH02_pn.js.map  index-YcOR5xtm.js  index-YcOR5xtm.js.map  index-eZr1rLXw.css  index-mFe_MXkD.js  index-mFe_MXkD.js.map
docs/: index.html  search-index.json  sitemap.xml
docs/api/: index.html
examples/: picsum_extra_b_mode_span.tbmp
include/: tbmp_bindings.h  tbmp_decode.h  tbmp_meta.h  tbmp_msgpack.h  tbmp_pixel.h  tbmp_port.h  tbmp_reader.h  tbmp_rotate.h  tbmp_types.h  tbmp_write.h
npm/: README.md  package.json  tbmp_wasm.js  tbmp_wasm.wasm
rust/bindings/: Cargo.toml  README.md  build.rs
rust/bindings/examples/: read_file.rs
rust/bindings/src/: bindings.rs  lib.rs
scripts/: build.sh  dev.sh  test.sh
src/: tbmp_decode.c  tbmp_meta.c  tbmp_msgpack.c  tbmp_pixel.c  tbmp_reader.c  tbmp_rotate.c  tbmp_wasm_entry.c  tbmp_write.c
tests/: tbmp_test_main.c  test_decode.c  test_edge_cases.c  test_fuzzing.c  test_helpers.h  test_meta.c  test_pixel.c  test_reader.c  test_rotate.c  test_suites.h  test_write.c
tools/: tbmp.c  tbmp_conv.c  tbmp_ui.c  tbmp_ui.h
tools/include/: tbmp_imgio.h  tbmp_meta_cli.h  tbmp_pngio.h  tbmp_ui.h
tools/src/: tbmp_imgio.c  tbmp_meta_cli.c  tbmp_pngio.c  tbmp_ui.c
wasm/: tbmp_wasm.wasm
(+17 files in other folders)
